--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -26,7 +26,8 @@
             text-align: center;
             background: linear-gradient(to right, #7a7cff, #ec6eff);
             padding: 14px 16px;
-            margin: 10%;
+            margin: 12%;
+            width: 73%;
             font-size: 20px;
             border-radius: 25px;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
