--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -1,44 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
 
-body {
-    background: linear-gradient(to right, #585bff, #e957ff);
+html {
+    scroll-behavior: smooth;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
+* {
     font-family: 'Open Sans', sans-serif;
+    padding: 0%;
+    margin: 0%;
+    text-decoration: none;
+    list-style: none;
 }
 
-#home>a {
-    float: left;
-    color: #000000;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+:root {
+    --main1-color: linear-gradient(to right, #585bff, #e957ff);
+    --main2-color: linear-gradient(to right, #7a7cff, #ec6eff);
+    --shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    --text-color: #000000;
 }
 
-#serv>a {
-    float: right;
-    color: #000000;
-    text-align: center;
-    padding: 0px 16px;
-    text-decoration: none;
-    font-size: 17px;
+body {
+    background: var(--main1-color);
+    color: var(--text-color);
+}
+
+.header-overlay {
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    align-self: center;
+    width: 100%;
+    top: 0%;
+    left: 0%;
+    padding: 2% 1%;
 }
 
 .title {
     text-align: center;
-    background: linear-gradient(to right, #7a7cff, #ec6eff);
+    background: var(--main2-color);
     padding: 14px 16px;
     margin: 12%;
     width: 73%;
     font-size: 20px;
     border-radius: 25px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.about>a {
-    display: flex;
-    justify-content: space-between;
-    align-self: center;
-    text-decoration: none;
-    color: #000000;
-    padding: 1%;
+    box-shadow: var(--shadow);
 }
