--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -14,6 +14,7 @@ body::-webkit-scrollbar {
     margin: 0%;
     text-decoration: none;
     list-style: none;
+    box-sizing: border-box;
 }
 
 :root {
@@ -37,6 +38,20 @@ body {
     top: 0%;
     left: 0%;
     padding: 2% 1%;
+}
+
+.logo {
+    font-size: 150%;
+}
+
+.user {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.user>a {
+    padding-left: 20px;
 }
 
 .title {
