--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -18,7 +18,7 @@ body::-webkit-scrollbar {
 }
 
 :root {
-    --main1-color: linear-gradient(to right, #585bff, #e957ff);
+    --main1-color: linear-gradient(to right, #1d1c1c, #7446ff);
     --main2-color: linear-gradient(to right, #7a7cff, #ec6eff);
     --shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     --text-color: #000000;
@@ -26,7 +26,6 @@ body::-webkit-scrollbar {
 
 body {
     background: var(--main1-color);
-    color: var(--text-color);
 }
 
 .header-overlay {
@@ -38,6 +37,7 @@ body {
     top: 0%;
     left: 0%;
     padding: 2% 1%;
+
 }
 
 .logo {
@@ -53,13 +53,83 @@ body {
 .user>a {
     padding-left: 20px;
     font-size: 20px;
+    color: white;
 }
+
+.satellite {
+    background: url("/assets/—Pngtree—vector\ free\ buckle\ cartoon\ satellite_4671210.png") no-repeat;
+    width: 100px;
+    height: 100px;
+    margin-top: 70px;
+    margin-left: 60px;
+    background-size: contain;
+    position: relative;
+    animation: moving-satellite 30s ease-in-out infinite forwards;
+}
+
+@keyframes moving-satellite {
+    0% {
+        left: 0;
+        top: 0;
+    }
+
+    12% {
+        left: 1250px;
+        top: 0;
+        transform: rotate(90deg);
+    }
+
+    26% {
+        left: 1250px;
+        top: 400px;
+        transform: rotate(180deg);
+    }
+
+    35% {
+        left: 0;
+        top: 400px;
+        transform: rotate(270deg);
+    }
+
+    50% {
+        left: 0;
+        top: 600px;
+        transform: rotate(0deg);
+    }
+
+    62% {
+        left: 1250px;
+        top: 600px;
+        transform: rotate(45deg);
+    }
+
+    76% {
+        left: 1250px;
+        top: 400px;
+        transform: rotate(270deg);
+    }
+
+    82% {
+        left: 0;
+        top: 400px;
+        transform: rotate(270deg);
+    }
+
+    100% {
+        left: 0;
+        top: 0;
+    }
+}
+
 
 .title {
     text-align: center;
     background: var(--main2-color);
     padding: 14px 16px;
-    margin: 12%;
+    margin-left: 12%;
+    margin-right: 12%;
+    margin-bottom: 6%;
+    margin-top: 1%;
     width: 73%;
     font-size: 20px;
     border-radius: 25px;
