--- a/frontend/index/login/style.css
+++ b/frontend/index/login/style.css
@@ -1,96 +1,237 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
 
-    * {
-      font-family: 'Open Sans', sans-serif;
-      padding: 0%;
-      margin: 0%;
-      text-decoration: none;
-      list-style: none;
-      box-sizing: border-box;
-    }
+* {
+  font-family: 'Open Sans', sans-serif;
+  padding: 0%;
+  margin: 0%;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+}
 
-    :root {
-      --main1-color: linear-gradient(to right, #1d1c1c, #7446ff);
-      --main2-color: linear-gradient(to right, #7a7cff, #ec6eff);
-      --shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      --text-color: #000000;
-    }
+body::-webkit-scrollbar {
+  display: none;
+}
 
-    body {
-      background: var(--main1-color);
-    }
+:root {
+  --main1-color: linear-gradient(to right, #1d1c1c, #7446ff);
+  --main2-color: linear-gradient(to right, #7a7cff, #ec6eff);
+  --shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  --text-color: #000000;
+}
 
-    .menu {
-      display: flex;
-      justify-content: space-between;
-      align-self: center;
-      width: 100%;
-      top: 0%;
-      left: 0%;
-      padding: 2% 1%;
+body {
+  background: var(--main1-color);
+}
 
-    }
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-self: center;
+  width: 100%;
+  top: 0%;
+  left: 0%;
+  padding: 2% 1%;
 
-    .home>a {
-      font-size: 150%;
-    }
+}
 
-    .user {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
+.home>a {
+  font-size: 150%;
+}
 
-    .user>a {
-      padding-left: 20px;
-      font-size: 20px;
-    }
+.user {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-    .box {
-      display: flex;
-      justify-content: center;
-      align-self: center;
-    }
+.user>a {
+  padding-left: 20px;
+  font-size: 20px;
+  color: white;
+}
 
-    .loginForm {
-      height: auto;
-      padding: 0 0px 20px 20px;
-      width: 230px;
-      text-align: left;
-      background: var(--main2-color);
-      border-radius: 25px;
-      box-shadow: var(--shadow);
-    }
+.UI {
+  display: flex;
+  justify-content: space-between;
+}
 
-    .field label {
-      font-size: 16px;
-    }
+#planet_2 {
+  background: url("/assets/—Pngtree—planet\ cartoon\ planet\ cartoon\ planet_7157759.png") no-repeat;
+  width: 250px;
+  height: 150px;
+  margin-left: 100px;
+  margin-top: 5%;
+  background-size: contain;
+  float: right;
+  animation: move-up-down_2 2s ease-in-out infinite;
+}
 
-    .field button {
-      margin: 10px 0 0 0;
-      width: 90%;
-      padding: 4px 6px 4px 6px;
-      border-radius: 15px;
-      background: var(--main2-color);
-      border: 0.5px solid black;
-      box-shadow: var(--shadow);
-      font-family: 'Open Sans', sans-serif;
-    }
+@keyframes move-up-down_1 {
+  0% {
+    transform: translateY(0);
+  }
 
-    .field input[type=text] {
-      padding: 5px 10px 2px 10px;
-      border-radius: 7px;
-      border: 2px solid rgb(52, 0, 185);
-    }
+  50% {
+    transform: translateY(-10px);
+  }
 
-    .fp {
-      margin: 0 24px 0 0;
+  100% {
+    transform: translateY(0);
+  }
+}
 
-      color: blue;
-      text-align: right;
-      font-size: 12px;
-    }
+#planet_1 {
+  background: url("/assets/—Pngtree—pink\ cartoon\ planet\ illustration_4578322.png") no-repeat;
+  width: 700px;
+  height: 600px;
+  margin-left: 400px;
+  background-size: contain;
+  float: left;
+  animation: move-up-down_1 2s ease-in-out infinite;
+}
 
-    .fp a {
-      text-decoration: none;
-    }
+@keyframes move-up-down_2 {
+  0% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.satellite {
+  background: url("/assets/—Pngtree—vector\ free\ buckle\ cartoon\ satellite_4671210.png") no-repeat;
+  width: 100px;
+  height: 100px;
+  margin-top: 70px;
+  background-size: contain;
+  position: relative;
+  animation: moving-satellite 40s ease-in-out infinite forwards;
+}
+
+@keyframes moving-satellite {
+  0% {
+    left: 0;
+    top: 0;
+  }
+
+  12% {
+    left: 1250px;
+    top: 0;
+    transform: rotate(0deg) translatey(100px) rotate(0deg);
+    transform: rotate(360deg) translateX(100px) rotate(-360deg);
+  }
+
+  26% {
+    left: 1250px;
+    top: 400px;
+    transform: rotate(90deg);
+
+  }
+
+  35% {
+    left: 0;
+    top: 400px;
+    transform: rotate(0deg) translatex(100px) rotate(0deg);
+    transform: rotate(360deg) translatey(100px) rotate(-360deg);
+  }
+
+  50% {
+    left: 0;
+    top: 600px;
+    transform: rotate(90deg);
+  }
+
+  62% {
+    left: 1250px;
+    top: 70px;
+    transform: rotate(0deg) translatex(100px) rotate(0deg);
+    transform: rotate(360deg) translatey(100px) rotate(360deg);
+  }
+
+  76% {
+    left: 0;
+    top: 300px;
+    transform: rotate(270deg);
+  }
+
+  82% {
+    left: 0;
+    top: 400px;
+    transform: rotate(270deg);
+  }
+
+  100% {
+    left: 0;
+    top: 0;
+  }
+}
+
+.box {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  padding: 25%;
+  margin-top: 1%;
+  position: fixed;
+}
+
+.loginForm {
+  height: auto;
+  padding: 0 0px 20px 20px;
+  width: 230px;
+  text-align: left;
+  background: var(--main2-color);
+  border-radius: 25px;
+  box-shadow: var(--shadow);
+}
+
+.field label {
+  font-size: 16px;
+}
+
+.field button {
+  margin: 10px 0 0 0;
+  width: 90%;
+  padding: 4px 6px 4px 6px;
+  border-radius: 15px;
+  background: var(--main2-color);
+  border: 0.5px solid black;
+  box-shadow: var(--shadow);
+  font-family: 'Open Sans', sans-serif;
+}
+
+.field input[type=text] {
+  padding: 5px 10px 2px 10px;
+  border-radius: 7px;
+  border: 2px solid rgb(52, 0, 185);
+}
+
+.fp {
+  margin: 0 24px 0 0;
+
+  color: blue;
+  text-align: right;
+  font-size: 12px;
+}
+
+.fp a {
+  text-decoration: none;
+}
+
+@media only screen and (max-width: 768px) {
+  .planet {
+    width: 100%;
+    margin: 0;
+  }
+
+  .box {
+    margin: 5%;
+  }
+}
