--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -4,10 +4,6 @@ html {
     scroll-behavior: smooth;
 }
 
-body::-webkit-scrollbar {
-    display: none;
-}
-
 * {
     font-family: 'Open Sans', sans-serif;
     padding: 0%;
@@ -56,82 +52,16 @@ body {
     color: white;
 }
 
-.satellite {
-    background: url("/assets/—Pngtree—vector\ free\ buckle\ cartoon\ satellite_4671210.png") no-repeat;
-    width: 100px;
-    height: 100px;
-    margin-top: 70px;
-    margin-left: 60px;
-    background-size: contain;
-    position: relative;
-    animation: moving-satellite 30s ease-in-out infinite forwards;
-}
-
-@keyframes moving-satellite {
-    0% {
-        left: 0;
-        top: 0;
+@media only screen and (max-width: 768px) {
+    .planet {
+      width: 100%;
+      margin: 0;
     }
-
-    12% {
-        left: 1250px;
-        top: 0;
-        transform: rotate(90deg);
+  
+    .box {
+      margin: 5%;
     }
-
-    26% {
-        left: 1250px;
-        top: 400px;
-        transform: rotate(180deg);
-    }
-
-    35% {
-        left: 0;
-        top: 400px;
-        transform: rotate(270deg);
-    }
-
-    50% {
-        left: 0;
-        top: 600px;
-        transform: rotate(0deg);
-    }
-
-    62% {
-        left: 1250px;
-        top: 600px;
-        transform: rotate(45deg);
-    }
-
-    76% {
-        left: 1250px;
-        top: 400px;
-        transform: rotate(270deg);
-    }
-
-    82% {
-        left: 0;
-        top: 400px;
-        transform: rotate(270deg);
-    }
-
-    100% {
-        left: 0;
-        top: 0;
-    }
-}
+  }
 
 
-.title {
-    text-align: center;
-    background: var(--main2-color);
-    padding: 14px 16px;
-    margin-left: 12%;
-    margin-right: 12%;
-    margin-bottom: 6%;
-    margin-top: 1%;
-    width: 73%;
-    font-size: 20px;
-    border-radius: 25px;
-    box-shadow: var(--shadow);
-}
+
