--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -14,7 +14,7 @@ html {
 }
 
 :root {
-    --main1-color: linear-gradient(to right, #1d1c1c, #7446ff);
+    --main1-color: linear-gradient(to right, #0c0c0c, #5d27ff);
     --main2-color: linear-gradient(to right, #7a7cff, #ec6eff);
     --shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     --text-color: #000000;
@@ -50,7 +50,7 @@ body {
     padding-left: 20px;
     font-size: 20px;
     color: white;
-}
+} 
 
 @media only screen and (max-width: 768px) {
     .planet {
