--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -16,6 +16,10 @@ html {
 :root {
     --main-color-1: linear-gradient(to right, #0c0c0c, #5d27ff);
     --main-color-2: linear-gradient(to right, #7a7cff, #ec6eff);
+    --main-bg-color-1: rgb(105, 105, 255);
+    --main-bg-color-2: rgb(105, 105, 255);
+    --main-bg-color-3: rgb(105, 105, 255);
+    --main-bg-color-4: rgb(105, 105, 255);
     --shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     --text-color-1: #000000;
     --text-color-2: rgb(255, 255, 255);
