--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -22,6 +22,7 @@ html {
     --main-bg-color-4: rgb(105, 105, 255);
     --main-bg-color-5: rgb(52, 52, 97);
     --shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    --shadow-1: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
     --text-color-1: #000000;
     --text-color-2: rgb(255, 255, 255);
 }
