--- a/views/user.ejs
+++ b/views/user.ejs
@@ -133,7 +133,7 @@
 </body>
 <script>
     function r_p_c() {
-        window.location.href = "user/Rock-Paper-scissors";
+        window.location.href = "/Rock-Paper-scissors";
     }
 </script>
 
