--- a/views/user.ejs
+++ b/views/user.ejs
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="/frontend/css/animation.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title><%= username %></title>
+    <title>
+        <%= username %>
+    </title>
 </head>
 <style>
     body {
