--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -6,8 +6,8 @@ html {
 
 * {
     font-family: 'Open Sans', sans-serif;
-    padding: 0%;
-    margin: 0%;
+    padding: 0;
+    margin: 0;
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
@@ -28,5 +28,11 @@ html {
 }
 
 body {
-    background: var(--main-color-1);
+    min-height: 100vh;
+    background: var(--main-color-1) no-repeat;
+    background-attachment: fixed;
 }
+
+body::-webkit-scrollbar {
+    display: none;
+  }
