--- a/views/user.ejs
+++ b/views/user.ejs
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="/frontend/css/animation.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>
-        <%= username %>
-    </title>
+    <title>Nova Star</title>
 </head>
 <style>
     body {
@@ -43,10 +41,11 @@
     ul {
         display: flex;
         justify-content: space-between;
+        color: white;
     }
 
     ul>li {
-        padding-left: 5%;
+        padding-left: 0;
     }
 
     @media only screen and (max-width: 768px) {
@@ -122,7 +121,7 @@
         </div>
         <nav>
             <ul>
-                <li><a><span class="material-symbols-outlined">account_circle</span></a></li>
+                <li><a href="/<%= username %>""><span class="material-symbols-outlined">account_circle</span><%= username %></a></li>
             </ul>
         </nav>
     </header>
@@ -135,7 +134,7 @@
 </body>
 <script>
     function r_p_c() {
-        window.location.href = "/Rock-Paper-scissors";
+        window.location.href = "/Rock-Paper-Scissors";
     }
 </script>
 
