--- a/games/Rock-Paper-Scissors.ejs
+++ b/games/Rock-Paper-Scissors.ejs
@@ -17,53 +17,6 @@
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap');
 
-    .header-overlay {
-        display: flex;
-        justify-content: space-between;
-        align-self: center;
-        color: var(--text-color-2);
-        width: 100%;
-        top: 0%;
-        left: 0%;
-        padding: 1% 1%;
-    }
-
-    .user {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    .user>a {
-        padding-left: 20px;
-        font-size: 20px;
-        color: var(--text-color-2);
-    }
-
-    ul {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    ul>li {
-        padding-left: 5%;
-    }
-
-    @media only screen and (max-width: 768px) {
-        .title {
-            margin: 15% 5%;
-            width: 90%;
-        }
-
-        .header-overlay {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: relative;
-            padding: 2% 1%;
-        }
-    }
-
     .games {
         display: flex;
         justify-content: center;
@@ -200,7 +153,7 @@
 <body>
     <header class="header-overlay header-logged">
         <div class="novastar">
-            <a href="/user" class="logo"><img src="/assets/favicon/favicon-32x32.png"></a>
+            <a href="/" class="logo"><img src="/assets/favicon/favicon-32x32.png"></a>
         </div>
         <nav>
             <ul>
