--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -1,38 +1,86 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap");
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 * {
-    font-family: 'Open Sans', sans-serif;
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
 }
 
 :root {
-    --main-color-1: linear-gradient(to right, #0c0c0c, #5d27ff);
-    --main-color-2: linear-gradient(to right, #7a7cff, #ec6eff);
-    --main-bg-color-1: rgb(34, 34, 158);
-    --main-bg-color-2: rgb(189, 49, 245);
-    --main-bg-color-3: rgb(105, 105, 255);
-    --main-bg-color-4: rgb(105, 105, 255);
-    --main-bg-color-5: rgb(52, 52, 97);
-    --shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    --shadow-1: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
-    --text-color-1: #000000;
-    --text-color-2: rgb(255, 255, 255);
+  --main-color-1: linear-gradient(to right, #0c0c0c, #5d27ff);
+  --main-color-2: linear-gradient(to right, #7a7cff, #ec6eff);
+  --main-bg-color-1: rgb(34, 34, 158);
+  --main-bg-color-2: rgb(189, 49, 245);
+  --main-bg-color-3: rgb(105, 105, 255);
+  --main-bg-color-4: rgb(105, 105, 255);
+  --main-bg-color-5: rgb(52, 52, 97);
+  --shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  --shadow-1: 0 4px 8px 0 rgba(255, 255, 255, 0.2),
+    0 6px 20px 0 rgba(255, 255, 255, 0.19);
+  --text-color-1: #000000;
+  --text-color-2: rgb(255, 255, 255);
 }
 
 body {
-    min-height: 100vh;
-    background: var(--main-color-1) no-repeat;
-    background-attachment: fixed;
+  min-height: 100vh;
+  background: var(--main-color-1) no-repeat;
+  background-attachment: fixed;
 }
 
 body::-webkit-scrollbar {
-    display: none;
+  display: none;
+}
+
+.header-overlay {
+  display: flex;
+  justify-content: space-between;
+  align-self: center;
+  width: 100%;
+  top: 0%;
+  left: 0%;
+  padding: 1% 1%;
+}
+
+.user {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.user > a {
+  padding-left: 20px;
+  font-size: 20px;
+  color: var(--text-color-2);
+}
+
+ul {
+  display: flex;
+  justify-content: space-between;
+  color: white;
+}
+
+ul > li {
+  padding-left: 0;
+}
+
+@media only screen and (max-width: 768px) {
+  .title {
+    margin: 15% 5%;
+    width: 90%;
   }
+
+  .header-overlay {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    padding: 2% 1%;
+  }
+}
