--- a/views/user.ejs
+++ b/views/user.ejs
@@ -91,6 +91,9 @@
     function r_p_c() {
         window.location.href = "/<%= username %>/Rock-Paper-Scissors";
     }
+    function t_t_t(){
+        window.location.href = "/<%= username %>/shootDown";
+    }
 </script>
 
 </html>
