--- a/games/Rock-Paper-Scissors.ejs
+++ b/games/Rock-Paper-Scissors.ejs
@@ -183,7 +183,7 @@
             <div id="scissor1"><span class="material-icons">content_cut</span></div>
         </div>
         <div id="person">
-            <p><b>You : </b></p>
+            <p><b><%= username %></b></p>
             <div id="rock" onclick="rps('1')"><span class="material-icons">circle</span></div>
             <div id="paper" onclick="rps('2')"><span class="material-icons">note</span></div>
             <div id="scissor" onclick="rps('3')"><span class="material-icons">content_cut</span></div>
