--- a/games/Rock-Paper-Scissors.ejs
+++ b/games/Rock-Paper-Scissors.ejs
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-<link href="/frontend/css/index.css" rel="stylesheet">
+<link href="/frontend/css/global.css" rel="stylesheet">
 <link href="/frontend/css/animation.css" rel="stylesheet">
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap');
