--- a/games/R-P-S-online.ejs
+++ b/games/R-P-S-online.ejs
@@ -11,7 +11,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <link href="/frontend/global.css" rel="stylesheet">
 <link href="/frontend/animation.css" rel="stylesheet">
 <style>
@@ -177,16 +178,20 @@
     </div>
     <div id="stage">
         <div id="computer">
-            <p><b>Computer : </b></p>
-            <div id="rock1"><span class="material-icons">circle</span></div>
-            <div id="paper1"><span class="material-icons">note</span></div>
-            <div id="scissor1"><span class="material-icons">content_cut</span></div>
+            <p><b>
+                    <%= p1 %>
+                </b></p>
+            <div id="rock1" onclick="rps('rock')"><span class="material-icons">circle</span></div>
+            <div id="paper1" onclick="rps('pper')"><span class="material-icons">note</span></div>
+            <div id="scissor1" onclick="rps('scissor')"><span class="material-icons">content_cut</span></div>
         </div>
         <div id="person">
-            <p><b><%= username %></b></p>
-            <div id="rock" onclick="rps('1')"><span class="material-icons">circle</span></div>
-            <div id="paper" onclick="rps('2')"><span class="material-icons">note</span></div>
-            <div id="scissor" onclick="rps('3')"><span class="material-icons">content_cut</span></div>
+            <p><b>
+                    <%= p2 %>
+                </b></p>
+            <div id="rock" onclick="rps('rock')"><span class="material-icons">circle</span></div>
+            <div id="paper" onclick="rps('pper')"><span class="material-icons">note</span></div>
+            <div id="scissor" onclick="rps('scissor')"><span class="material-icons">content_cut</span></div>
         </div>
     </div>
 </body>
@@ -210,7 +215,7 @@
     var b = "You win";
     var c = "You lose";
 
-    var com = [1, 2, 3];
+    var c = [1, 2, 3];
     var per = [1, 2, 3];
 
     function rps(x) {
@@ -226,8 +231,9 @@
     }
 
     function attempt() {
-        y++
-        s2.textContent = y;
+        y = 0
+        if (y < 3)
+            s2.textContent = ++y;
     }
 
     function score(result) {
