--- a/games/shootDown.ejs
+++ b/games/shootDown.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link href="/frontend/css/index.css" rel="stylesheet"> -->
-    <link href="/frontend/css/animation.css" rel="stylesheet">
+    <link href="/frontend/animation.css" rel="stylesheet">
     <title>Shoot Down</title>
     <style>
         body {
