--- a/views/user.ejs
+++ b/views/user.ejs
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/frontend/css/global.css">
-    <link rel="stylesheet" href="/frontend/css/animation.css">
+    <link rel="stylesheet" href="/frontend/global.css">
+    <link rel="stylesheet" href="/frontend/animation.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Nova Star</title>
@@ -74,7 +74,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="/<%= username %>""><span class=" material-symbols-outlined" style="color: white;">account_circle</span>
+                <li><a href="/<%= username %>""><span class=" material-symbols-outlined"
+                        style="color: white;">account_circle</span>
                         <%= username %>
                     </a></li>
             </ul>
@@ -85,15 +86,26 @@
         <div class="t-t-t in-game" onclick="shootDown()">shootDown</div>
         <div class="t-t-t in-game" onclick="t_t_t()">Tic Tac Toe</div>
     </div>
+    <div class="friends" id="friends">
+        <ul>
+            <li>1</li>
+            <li>1</li>
+            <li>1</li>
+            <li>1</li>
+            <li>1</li>
+            <li>1</li>
+        </ul>
+    </div>
 </body>
-<script>
+<script>s
+
     function r_p_c() {
         window.location.href = "/<%= username %>/Rock-Paper-Scissors";
     }
-    function shootDown(){
+    function shootDown() {
         window.location.href = "/<%= username %>/shootDown";
     }
-    function t_t_t(){
+    function t_t_t() {
         window.location.href = "/<%= username %>/TicTacToe";
     }
 </script>
