--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/frontend/css/global.css" />
-    <link rel="stylesheet" href="/frontend/css/animation.css" />
+    <link rel="stylesheet" href="/frontend/global.css" />
+    <link rel="stylesheet" href="/frontend/animation.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>
