--- a/games/shootDown.ejs
+++ b/games/shootDown.ejs
@@ -23,7 +23,7 @@
 
 <body>
     <svg id="svg" width="400" height="400">
-        <rect id="rect" x="100" y="50" width="30" height="30" fill="blue " />
+        <rect id="rect" x="100" y="50" width="30" height="30" fill="red " />
         <line id="line" x1="0" y1="0" x2="0" y2="0" stroke="orange" stroke-width="2" />
     </svg>
 </body>
