--- a/games/chess.ejs
+++ b/games/chess.ejs
@@ -35,11 +35,11 @@
 
 <body>
   <div class="chessboard">
-    <button class="square black"></button>
-    <button class="square white"></button>
-    <button class="square black"></button>
-    <button class="square white"></button>
-    <button class="square black"></button>
+    <button class="square black">♜</button>
+    <button class="square white">♞</button>
+    <button class="square black">♝</button>
+    <button class="square white">♚</button>
+    <button class="square black">♛</button>
     <button class="square white"></button>
     <button class="square black"></button>
     <button class="square white"></button>
