--- a/games/chess.ejs
+++ b/games/chess.ejs
@@ -23,12 +23,12 @@
     }
 
     .black {
-      background-color: #e26a6a;
-      color: #fff;
+      background-color: #000000;
+     color: #fff;
     }
 
     .white {
-      background-color: #28d780;
+      background-color: #ffffff;
     }
   </style>
 </head>
@@ -40,33 +40,17 @@
     <button class="square black">♝</button>
     <button class="square white">♚</button>
     <button class="square black">♛</button>
-    <button class="square white"></button>
-    <button class="square black"></button>
-    <button class="square white"></button>
-    <button class="square white"></button>
-    <button class="square black"></button>
-    <button class="square white"></button>
-    <button class="square black"></button>
-    <button class="square white"></button>
-    <button class="square black"></button>
-    <button class="square white"></button>
-    <button class="square black"></button>
-    <button class="square black"></button>
-    <button class="square white"></button>
-    <button class="square black"></button>
-    <button class="square white"></button>
-    <button class="square black"></button>
-    <button class="square white"></button>
-    <button class="square black"></button>
-    <button class="square white"></button>
-    <button class="square white"></button>
-    <button class="square black"></button>
-    <button class="square white"></button>
-    <button class="square black"></button>
-    <button class="square white"></button>
-    <button class="square black"></button>
-    <button class="square white"></button>
-    <button class="square black"></button>
+    <button class="square white">♝</button>
+    <button class="square black">♞</button>
+    <button class="square white">♜</button>
+    <button class="square white">♟</button>
+    <button class="square black">♟</button>
+    <button class="square white">♟</button>
+    <button class="square black">♟</button>
+    <button class="square white">♟</button>
+    <button class="square black">♟</button>
+    <button class="square white">♟</button>
+    <button class="square black">♟</button>
     <button class="square black"></button>
     <button class="square white"></button>
     <button class="square black"></button>
@@ -99,6 +83,22 @@
     <button class="square black"></button>
     <button class="square white"></button>
     <button class="square black"></button>
+    <button class="square black">♟</button>
+    <button class="square white">♟</button>
+    <button class="square black">♟</button>
+    <button class="square white">♟</button>
+    <button class="square black">♟</button>
+    <button class="square white">♟</button>
+    <button class="square black">♟</button>
+    <button class="square white">♟</button>
+    <button class="square white">♜</button>
+    <button class="square black">♞</button>
+    <button class="square white">♝</button>
+    <button class="square black">♚</button>
+    <button class="square white">♛</button>
+    <button class="square black">♝</button>
+    <button class="square white">♞</button>
+    <button class="square black">♜</button>
   </div>
 
 
