--- a/games/R-P-S-online.ejs
+++ b/games/R-P-S-online.ejs
@@ -178,20 +178,18 @@
     </div>
     <div id="stage">
         <div id="computer">
-            <p><b>
-                    <%= p1 %>
-                </b></p>
-            <div id="rock1" onclick="rps('rock')"><span class="material-icons">circle</span></div>
-            <div id="paper1" onclick="rps('pper')"><span class="material-icons">note</span></div>
-            <div id="scissor1" onclick="rps('scissor')"><span class="material-icons">content_cut</span></div>
+            <p><b>Computer : </b></p>
+            <div id="rock1"><span class="material-icons">circle</span></div>
+            <div id="paper1"><span class="material-icons">note</span></div>
+            <div id="scissor1"><span class="material-icons">content_cut</span></div>
         </div>
         <div id="person">
             <p><b>
-                    <%= p2 %>
+                    <%= username %>
                 </b></p>
-            <div id="rock" onclick="rps('rock')"><span class="material-icons">circle</span></div>
-            <div id="paper" onclick="rps('pper')"><span class="material-icons">note</span></div>
-            <div id="scissor" onclick="rps('scissor')"><span class="material-icons">content_cut</span></div>
+            <div id="rock" onclick="rps('1')"><span class="material-icons">circle</span></div>
+            <div id="paper" onclick="rps('2')"><span class="material-icons">note</span></div>
+            <div id="scissor" onclick="rps('3')"><span class="material-icons">content_cut</span></div>
         </div>
     </div>
 </body>
@@ -215,7 +213,7 @@
     var b = "You win";
     var c = "You lose";
 
-    var c = [1, 2, 3];
+    var com = [1, 2, 3];
     var per = [1, 2, 3];
 
     function rps(x) {
@@ -231,9 +229,8 @@
     }
 
     function attempt() {
-        y = 0
-        if (y < 3)
-            s2.textContent = ++y;
+        y++
+        s2.textContent = y;
     }
 
     function score(result) {
@@ -333,6 +330,11 @@
             return c;
         }
     }
+</script>
+<script src="/socket.io/socket.io.js"></script>
+<script>
+    const socket = io();
+    socket.emit("connection");
 </script>
 
 </html>
