--- a/views/user.ejs
+++ b/views/user.ejs
@@ -76,8 +76,8 @@
         </nav>
     </header>
     <div class="games">
-        <div class="r-p-s in-game" onclick="r_p_c()">Rock-Paper-scissors</div>
-        <div class="r-p-s in-game" onclick="r_p_c_online()">Rock-Paper-scissors-online</div>
+        <div class="t-t-t in-game" onclick="r_p_c()">Rock-Paper-scissors</div>
+        <div class="t-t-t in-game" onclick="r_p_c_online()">Rock-Paper-scissors-online</div>
         <div class="t-t-t in-game" onclick="r_p_c()">Rock-Paper-scissors</div>
         <div class="t-t-t in-game" onclick="shootDown()">shootDown</div>
         <div class="t-t-t in-game" onclick="t_t_t()">Tic Tac Toe</div>
