--- a/games/tic-tac-toe-online.ejs
+++ b/games/tic-tac-toe-online.ejs
@@ -19,10 +19,11 @@
             justify-content: space-between;
             margin: 10px 0  10px;
         }
-        input{
+        button{
             width: 90px;
             height: 90px;
             border-radius: 10px;
+            border: none;
         }
     </style>
 </head>
@@ -30,19 +31,19 @@
 <body>
 <div class="container">
 <div class="row">
-    <input type="text" id="box-0" onclick="clik(0)"/>
-    <input type="text" id="box-1" onclick="clik(1)"/>
-    <input type="text" id="box-2" onclick="clik(2)"/>
+    <button id="box-0" onclick="clik(0)"></button>
+    <button id="box-1" onclick="clik(1)"></button>
+    <button id="box-2" onclick="clik(2)"></button>
 </div>
 <div class="row">
-    <input type="text" id="box-3" onclick="clik(3)"/>
-    <input type="text" id="box-4" onclick="clik(4)"/>
-    <input type="text" id="box-5" onclick="clik(5)"/>
+    <button id="box-3" onclick="clik(3)"></button>
+    <button id="box-4" onclick="clik(4)"></button>
+    <button id="box-5" onclick="clik(5)"></button>
 </div>
 <div class="row">
-    <input type="text" id="box-6" onclick="clik(6)"/>
-    <input type="text" id="box-7" onclick="clik(7)"/>
-    <input type="text" id="box-8" onclick="clik(8)"/>
+    <button id="box-6" onclick="clik(6)"></button>
+    <button id="box-7" onclick="clik(7)"></button>
+    <button id="box-8" onclick="clik(8)"></button>
 </div>
 </div>
     <script src="/socket.io/socket.io.js"></script>
