--- a/games/ticTacToe.ejs
+++ b/games/ticTacToe.ejs
@@ -73,9 +73,7 @@
         </div>
     </div>
     <p id="displayMessage"></p>
-    <p>
-        <%= username %>
-    </p>
+    <p>you</p>
     <p id="pstat" class="stat"></p>
     <p>Computer</p>
     <p id="bstat" class="stat"></p>
